--- a/scss/simple.scss
+++ b/scss/simple.scss
@@ -7,8 +7,8 @@
 }
 
 .background-2 {
-    background: #243887;
-    background-image: linear-gradient(#083a59, #184368);
+    background: #063769;
+    background-image: linear-gradient(#063769, #06305b);
 }
 
 .background-3 {
@@ -16,10 +16,9 @@
 }
 
 .background-4 {
-    background: #7b756d;
-    color: #fff;
-    background-image: linear-gradient(#7b756d, #6f5e48);
-    background: #083a59;
+
+    background-image: linear-gradient(#fed403, #e5c007);
+    //background: #fed403;
 }
 
 .background-footer,
@@ -109,10 +108,9 @@ html {
     flex-flow: column;
 }
 
-@media (min-width: 750px) {
+@media (min-width: 700px) {
     .page-header {
-        flex-flow: row;
-        align-items: center;
+        align-items: flex-end;
 
     }
 }
