--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,9 +1,9 @@
 /*!
-Theme Name: SimpleTheme
+Theme Name: Sorbase
 Theme URI: https://www.hjemmesider.dk
 Author: Morten Andersen - www.hjemmesider.dk
 Author URI: https://www.hjemmesider.dk/morten-andersen
-Description: Base / Starter theme
+Description: Base / Starter theme til SOROPTIMIST INTERNATIONAL DENMARK
 Version: 1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
