--- a/scss/font.scss
+++ b/scss/font.scss
@@ -3,8 +3,8 @@ body, html {
 }
 
 body {
-    font-family: 'Questrial', sans-serif;
-    color: #2d2d2d;
+    font-family: 'Karla', sans-serif;
+    color: #000;
     font-size: 1em;
     font-weight: 400;
     line-height: 1.5;
@@ -18,12 +18,13 @@ h1,
 h2,
 h3,
 .post-loop-title {
-    font-weight: 400;
-
+    font-weight: 700;
+    font-family: 'Montserrat', sans-serif;
+    text-transform: uppercase;
 }
 
 h1 {
-    font-size: 2em;
+    font-size: 1.3em;
     line-height: 1.1;
     margin: 0 0 .15em 0;
 }
@@ -31,7 +32,7 @@ h1 {
 
 h2,
 .post-loop-title {
-    font-size: 1.4em;
+    font-size: 1.1em;
     line-height: 1.2;
     margin: 2em 0 0 0;
 }
@@ -41,9 +42,8 @@ h2,
 }
 
 h3 {
-    font-size: 1.3em;
-    border-left: .25em solid;
-    padding-left: 1em;
+    font-size: 1em;
+    text-transform: u
     aside & {
         margin-top: 0;
     }
@@ -72,6 +72,7 @@ h4+p {
 }
 
 p {
+    font-size: 1.1em;
     .textwidget &,
     aside &,
     .simple-archive & {
@@ -214,11 +215,14 @@ figcaption {
 
 .site-title {
     color: inherit;
-    font-size: 1.4em;
+    text-transform: uppercase;
+    font-weight: 300;
+    font-size: 1.1em;
     line-height: 1;
+    text-shadow: 1px 1px #999;
 
     a {
-        color: inherit;
+        color: #063769;
         text-decoration: none;
     }
 }
@@ -231,11 +235,22 @@ figcaption {
 
 .site-logo {
 
-    margin-right: 1em;
-
     img {
         max-width: 220px;
         float: left;
+    }
+}
+@media (min-width: 700px) {
+    .site-logo {
+    border-left: 1em solid #fed404;
+    border-right: 1em solid #fed404;
+        margin-right: 5vw;
+    margin-left: 1vw;
+}
+}
+@media (min-width: 1025px) {
+    .site-logo {
+        box-shadow: -10px 0px 40px #777;
     }
 }
 .site-header-text {
