--- a/scss/banner.scss
+++ b/scss/banner.scss
@@ -28,8 +28,8 @@
     top: 0;
     > a {
         text-decoration: none;
-        background: #cb7515;
-        color: #fff;
+        background: #fed404;
+        color: #000;
         padding: .5em 1em;
         float: right;
         margin-top: .5em;
