personer med cat

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -28,6 +28,7 @@ Domain Path: /languages
 @import 'banner';
 @import 'lightbox';
 @import 'menu';
+@import 'menu-footer';
 @import 'menu-add';
 @import 'logo-menu';
 @import 'woo';
