--- a/scss/simple.scss
+++ b/scss/simple.scss
@@ -4,6 +4,7 @@
 
 .background-main {
     background: #fff;
+    color: #000;
 }
 
 .background-2 {
@@ -18,7 +19,7 @@
 .background-4 {
 
     background-image: linear-gradient(#fed403, #e5c007);
-    //background: #fed403;
+
 }
 
 .background-footer,
