--- a/scss/style.scss
+++ b/scss/style.scss
@@ -27,6 +27,7 @@ Domain Path: /languages
 @import 'person';
 @import 'banner';
 @import 'lightbox';
+@import 'accordion';
 @import 'menu';
 @import 'menu-footer';
 @import 'menu-add';
