--- a/scss/module.scss
+++ b/scss/module.scss
@@ -315,3 +315,9 @@ figure {
         background: #fff;
     }
 }
+.intranet {
+    background: #ffbdbd;
+    padding: 2em;
+    margin: 2em 0;
+    border: 1px solid;
+}
