--- a/scss/sorstyle.scss
+++ b/scss/sorstyle.scss
@@ -17,3 +17,25 @@
 		background: #ddb907;
 	}
 }
+.bgid-1,
+.bgid-2,
+.bgid-3,
+.bgid-4 {
+	padding-bottom: 2em;
+}
+.bgid-1{
+
+}
+.bgid-2{
+	background: #dddee0;
+    color: #222;
+
+}
+
+.bgid-3{
+
+}
+.bgid-4{
+	background: #fed404;
+    color: #000;
+}
