--- a/scss/font.scss
+++ b/scss/font.scss
@@ -1,4 +1,5 @@
-body, html {
+body,
+html {
     height: 100%;
 }
 
@@ -36,20 +37,31 @@ h2,
     line-height: 1.2;
     margin: 2em 0 0 0;
 }
+
 .post-loop-title,
 .main .post-loop-title {
     margin: 0 0 .5em 0;
 }
 
+.main .post-loop-title {
+    font-size: .9em;
+}
+
 h3 {
     font-size: 1em;
-    text-transform: u
+
     aside & {
         margin-top: 0;
     }
+
+    .term-name {
+        font-size: 1.4em;
+    }
 }
 
-p+h2 {margin-bottom:-.5em}
+p+h2 {
+    margin-bottom: -.5em
+}
 
 h4,
 h5,
@@ -57,7 +69,7 @@ h6 {
     font-size: 1.1em;
 }
 
-h1 + h2 {
+h1+h2 {
     margin-top: 0;
 }
 
@@ -73,6 +85,7 @@ h4+p {
 
 p {
     font-size: 1.1em;
+
     .textwidget &,
     aside &,
     .simple-archive & {
@@ -132,9 +145,9 @@ aside div:first-child {
 
 }
 
-@media (min-width: 769px){
+@media (min-width: 769px) {
     .background-pre-footer .widget-title {
-    margin-bottom: 2em;
+        margin-bottom: 2em;
     }
 }
 
@@ -237,24 +250,28 @@ figcaption {
 
 .site-logo {
     align-self: center;
+
     img {
         max-width: 220px;
         float: left;
     }
 }
+
 @media (min-width: 700px) {
     .site-logo {
-    border-left: 1em solid #fed404;
-    border-right: 1em solid #fed404;
+        border-left: 1em solid #fed404;
+        border-right: 1em solid #fed404;
         margin-right: 5vw;
-    margin-left: 1vw;
+        margin-left: 1vw;
+    }
 }
-}
+
 @media (min-width: 1025px) {
     .site-logo {
         box-shadow: -10px 0px 40px #777;
     }
 }
+
 .site-header-text {
     float: left;
     margin-right: 1em;
