--- a/scss/form.scss
+++ b/scss/form.scss
@@ -137,7 +137,8 @@ form {
         }
     }
 }
-#loginform {
+#loginform,
+#tilmeld {
     max-width: 500px;
     background: #063361;
     padding: 1em 2em 2em 2em;
