--- a/scss/module.scss
+++ b/scss/module.scss
@@ -150,18 +150,21 @@ figure {
     .flex-item {
         border-bottom: 1px solid #e1e1e1;
         margin-bottom: 2em;
+
         article {
             display: flex;
             flex-flow: column;
             height: 100%;
+
             .more-link-con {
                 margin-bottom: 1em;
                 margin-top: auto;
             }
+
             &.sticky {
                 .more-link-con {
-                margin-bottom: 0;
-            }
+                    margin-bottom: 0;
+                }
             }
         }
     }
@@ -222,6 +225,7 @@ figure {
 .box-img {
     overflow: hidden;
     margin-bottom: 1em;
+
     img {
         float: left;
     }
@@ -232,6 +236,7 @@ figure {
     padding: 1em;
     box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
     margin-bottom: 1em;
+
     &:last-of-type {
         margin-bottom: 0;
     }
@@ -280,6 +285,7 @@ figure {
 
 .simple-archive {
     margin-top: 1em;
+
     aside & {
         margin-top: 0;
     }
@@ -301,22 +307,26 @@ figure {
         align-items: center;
     }
 }
+
 .flex-item .ydelse {
     p {
         line-height: 1.3;
     }
 }
+
 .background-header {
     border-bottom: 1em solid #fed403;
     background: #dddee0;
 }
-@media (min-width: 700px){
+
+@media (min-width: 700px) {
     .background-header {
         background: #fff;
     }
 }
+
 .intranet {
-    background: #ffbdbd;
+    background: #dddee0;
     padding: 2em;
     margin: 2em 0;
     border: 1px solid;
