--- a/scss/menu-footer.scss
+++ b/scss/menu-footer.scss
@@ -10,3 +10,40 @@
 		}
 	}
 }
+#meta-2 {
+	ul {
+		margin: 0;
+		padding: 0;
+			li{
+				margin: 0;
+				padding: 0;
+				list-style-type: none;
+				&:nth-child(3),
+				&:nth-child(4),
+				&:nth-child(5) {
+					display: none;
+				}
+			}
+	}
+
+	a {
+            text-decoration: none;
+            display: block;
+            padding: .5em 0;
+            color: inherit;
+            opacity: .8;
+            border-bottom: 1px solid rgba(255,255,255,.2);
+            &:hover {
+                opacity: 1;
+            }
+        }
+}
+.logged-in #meta-2 ul {
+
+	li:nth-child(1){
+		display: none;
+	}
+	a {
+		color: red;
+	}
+	}
