--- a/scss/font.scss
+++ b/scss/font.scss
@@ -4,9 +4,9 @@ html {
 }
 
 body {
-    font-family: 'Karla', sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
     color: #000;
-    font-size: 1em;
+    font-size: .9em;
     font-weight: 400;
     line-height: 1.5;
     text-transform: none;
