--- a/scss/sorstyle.scss
+++ b/scss/sorstyle.scss
@@ -65,3 +65,13 @@
         max-width: 500px;
     }
 }
+.wp-activate-container {
+    max-width: 1200px;
+    background: #07315c;
+    padding: 3em;
+    margin: 3em auto;
+    overflow: hidden;
+    a {
+        color: #fff;
+    }
+}
