--- a/scss/style.scss
+++ b/scss/style.scss
@@ -30,6 +30,7 @@ Domain Path: /languages
 @import 'accordion';
 @import 'menu';
 @import 'menu-footer';
+@import 'menu-aside';
 @import 'menu-add';
 @import 'logo-menu';
 @import 'woo';
