--- a/scss/menu-aside.scss
+++ b/scss/menu-aside.scss
@@ -8,6 +8,7 @@ aside {
     border-top: 3px solid #fff;
     padding-bottom: 1em;
     font-weight: bold;
+    margin-bottom: 2em;
 		}
 	}
 	.sub-menu {
