--- a/scss/font.scss
+++ b/scss/font.scss
@@ -25,7 +25,7 @@ h3,
 }
 
 h1 {
-    font-size: 1.3em;
+    font-size: 1.5em;
     line-height: 1.1;
     margin: 0 0 .15em 0;
 }
@@ -36,6 +36,7 @@ h2,
     font-size: 1.1em;
     line-height: 1.2;
     margin: 2em 0 0 0;
+    text-transform: none;
 }
 
 .post-loop-title,
