--- a/scss/menu.scss
+++ b/scss/menu.scss
@@ -15,18 +15,19 @@
     -webkit-appearance: none;
     border: none;
     outline: none;
-    margin-right: 5vw;
+    margin-right: 2em;
+    margin-left: auto;
 }
 @media (max-width: 700px) {
     #nav-icon {
         position: absolute;
     right: 0;
-    bottom: 2em
+    top: 2em
     }
 }
 @media (min-width: 770px){
     #nav-icon {
-        margin-right: calc(5vw - 2em);
+
     }
 }
 
