--- a/scss/sorstyle.scss
+++ b/scss/sorstyle.scss
@@ -52,6 +52,18 @@
     background: #fff;
     color: #000;
 }
+.background-front6 {
+    background: #fed404;
+    color: #000;
+}
+.background-front5 {
+    background: #fff;
+    color: #000;
+}
+.background-front4 {
+    background: #dddee0;
+    color: #000;
+}
 
 #signup-content {
     background: #fff;
@@ -97,4 +109,8 @@
  .box-shortcode .flex-item {
     background: #f2f2f2;
     padding: 2em;
+    color: #000;
+    a {
+        color: #000;
+    }
 }
