--- a/scss/slider.scss
+++ b/scss/slider.scss
@@ -118,8 +118,8 @@ ul.slider {
 
 .carousel {
     margin: 2em 0;
-    border-top: 5px solid #f2f2f2;
-    border-bottom: 5px solid #f2f2f2;
+    border-top: 5px solid #063769;
+    border-bottom: 5px solid #063769;
     padding: 20px 0 0 0;
     .box-shortcode {
         margin: 0;
@@ -137,7 +137,7 @@ ul.slider {
     }
     .bx-controls-direction a, .bx-controls-auto a {
         background-image: none;
-        color: #a9a9a9;
+        color: #063769;
         &:hover {
             color: #222;
         }
