--- a/scss/font.scss
+++ b/scss/font.scss
@@ -111,6 +111,9 @@ footer p {
     text-transform: uppercase;
     font-weight: 400;
     line-height: 1.25;
+    a {
+        text-decoration: none;
+    }
 }
 
 .more-link-con {
