--- a/scss/sorstyle.scss
+++ b/scss/sorstyle.scss
@@ -150,3 +150,32 @@
 .background-front2 {
     color: #000;
 }
+
+.background-front6 {
+    text-align: center;
+    padding: 3em 1em 2em 1em
+}
+.background-front6 h4 {
+    margin: 0;
+    color: #ffffffab;
+    font-size: 2em;
+    text-transform: uppercase;
+}
+.background-front6 h5 {
+    font-size: 1em;
+    color: #4f4c4c;
+    font-weight: normal;
+    text-align: left;
+    line-height: 1.2;
+    margin: .75em 0 0 0;
+}
+.background-front6 img {
+    -webkit-box-shadow: 0 0 10px #000;
+    box-shadow: 0 0 10px #000
+}
+#rss-2 {
+    color: #fff;
+}
+#rss-2 a {
+        color: #fff;
+}
