--- a/scss/sorstyle.scss
+++ b/scss/sorstyle.scss
@@ -153,10 +153,10 @@
 
 .background-front6 {
     text-align: center;
-    padding: 3em 1em 2em 1em
+    padding: 3em 1em;
 }
 .background-front6 h4 {
-    margin: 0;
+    margin: 0 0 0.5em 0;
     color: #ffffffab;
     font-size: 2em;
     text-transform: uppercase;
