--- a/scss/sorstyle.scss
+++ b/scss/sorstyle.scss
@@ -166,11 +166,6 @@
     color: #341818;
     font-weight: normal;
     line-height: 1.2;
-    margin: .75em 0 0 0;
-    background: #ffffff6e;
-    padding: 1em;
-    border: 1px solid #fff;
-    min-height: 5em;
 }
 .background-front6 img {
     border: 2px solid #fff;
@@ -183,4 +178,20 @@
 }
 #rss-2 a {
         color: #fff;
+}
+#rss-2 ul {
+    margin: 0;
+    padding: 0;
+}
+#rss-2 li {
+    margin: 0;
+    padding: 0;
+    list-style-type: none
+}
+.page-footer input {
+    line-height: 1.5;
+}
+.page-footer input[type=submit] {
+    max-width: 100px;
+    padding: .25em 0;
 }
