--- a/scss/module.scss
+++ b/scss/module.scss
@@ -345,5 +345,8 @@ figure {
 }
 .event-data {
     padding: 1em;
-    background: #dddee0;
+    background: #fed404;
+    h4 {
+        margin: 0;
+    }
 }
