--- a/scss/module.scss
+++ b/scss/module.scss
@@ -343,7 +343,7 @@ figure {
     border: 1px solid #dddee0;
     background-image: url(assets/images/lock.png);
     background-repeat: no-repeat;
-    background-position: 10px 10px;
+    background-position: 2em 2em;
 }
 .event-data {
     padding: 1em;
