--- a/scss/sorstyle.scss
+++ b/scss/sorstyle.scss
@@ -47,23 +47,32 @@
         border-color: #063769
     }
 }
-
+.background-front1 {
+    background: #dddee0;
+    color: #000;
+}
+.background-front2 {
+    background: #063769;
+    color: #fff;
+}
 .background-front3 {
     background: #fff;
     color: #000;
+}
+.background-front4 {
+     background: #dddee0;
+    color: #000;;
+}
+.background-front5 {
+    background: #063769;
+    color: #fff;
 }
 .background-front6 {
     background: #fed404;
     color: #000;
 }
-.background-front5 {
-    background: #fff;
-    color: #000;
-}
-.background-front4 {
-    background: #dddee0;
-    color: #000;
-}
+
+
 
 #signup-content {
     background: #fff;
