--- a/scss/slider.scss
+++ b/scss/slider.scss
@@ -137,9 +137,9 @@ ul.slider {
     }
     .bx-controls-direction a, .bx-controls-auto a {
         background-image: none;
-        color: #063769;
+        color: #fff;
         &:hover {
-            color: #222;
+            color: #f2f2f2;
         }
     }
     .bx-prev {
