--- a/scss/sorstyle.scss
+++ b/scss/sorstyle.scss
@@ -218,7 +218,7 @@ article.event {
   background: #f2f2f2;
   color: #000;
   padding: 2em;
-  margin-bottom: 2em;
+  margin-top: 2em;
 }
 @media (min-width: 700px){
   .entotre {
