--- a/scss/sorstyle.scss
+++ b/scss/sorstyle.scss
@@ -244,3 +244,11 @@ article.event {
     grid-row-end: 1;
 }
 }
+.entotre {
+    a {
+        color: #000;
+    }
+    li {
+    border-bottom: 1px solid #fff
+}
+}
