--- a/scss/sorstyle.scss
+++ b/scss/sorstyle.scss
@@ -271,3 +271,25 @@ a.knap2 {
         background-image: linear-gradient(45deg, transparent, #b6b6b6 100px);
     }
 }
+
+.subsites {
+    margin: 1em 0;
+    padding: 0;
+    width: 100%;
+        li {
+            margin: 0;
+            padding: 0;
+            list-style-type: none;
+            border-bottom: 1px solid #f2f2f2;
+        }
+}
+@media (min-width: 800px){
+    .subsites {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 1em;
+        li {
+
+        }
+    }
+}
