--- a/scss/sorstyle.scss
+++ b/scss/sorstyle.scss
@@ -286,7 +286,7 @@ a.knap2 {
             display: none;
         }
 }
-@media (min-width: 800px){
+@media (min-width: 700px){
     .subsites {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
@@ -295,5 +295,11 @@ a.knap2 {
             padding: 0;
             border-bottom: none;
         }
+    }
+}
+@media (min-width: 1000px){
+    .subsites {
+
+        grid-template-columns: repeat(5, 1fr);
     }
 }
