--- a/scss/sorstyle.scss
+++ b/scss/sorstyle.scss
@@ -339,3 +339,11 @@ a.knap2 {
         }
     }
 }
+.shop-excerpt {
+    padding: 1em;
+    background: #f2f2f2;
+    margin: .5em 0;
+    p {
+        margin: 0;
+    }
+}
