--- a/scss/sorstyle.scss
+++ b/scss/sorstyle.scss
@@ -343,7 +343,11 @@ a.knap2 {
     padding: 1em;
     background: #f2f2f2;
     margin: .5em 0;
+    margin-top: auto;
     p {
         margin: 0;
     }
+}
+.simple-archive.produkter .flex-item article .more-link-con {
+    margin-top: 1em
 }
