--- a/scss/module.scss
+++ b/scss/module.scss
@@ -308,6 +308,10 @@ figure {
     margin: 2em 0;
 }
 
+.box-shortcode {
+    clear: both;
+}
+
 .logo-text-con {
     display: flex;
     flex-flow: column;
