--- a/scss/person.scss
+++ b/scss/person.scss
@@ -134,3 +134,20 @@ border: .5em solid #fff;
         }
     }
 }
+
+@media (min-width: 700px){
+    article .personer-shortcode.person.left {
+        max-width: 300px;
+        float: left;
+        margin: 1em 2em 2em 0;
+    }
+    article .personer-shortcode.person.right {
+        max-width: 300px;
+        float: right;
+        margin: 1em 0 2em 2em;
+    }
+    article .personer-shortcode.person.none {
+        max-width: 300px;
+        margin: 1em 0;
+    }
+}
