--- a/scss/sorstyle.scss
+++ b/scss/sorstyle.scss
@@ -276,6 +276,7 @@ a.knap2 {
     margin: 1em 0;
     padding: 0;
     width: 100%;
+    font-size: .9em
         li {
             margin: 0;
             padding: .5em 0;
@@ -284,6 +285,12 @@ a.knap2 {
         }
         .site-1 {
             display: none;
+        }
+        a {
+            text-decoration: none;
+            &:hover{
+                text-decoration: underline;
+            }
         }
 }
 @media (min-width: 700px){
