--- a/scss/sorstyle.scss
+++ b/scss/sorstyle.scss
@@ -276,7 +276,7 @@ a.knap2 {
     margin: 1em 0;
     padding: 0;
     width: 100%;
-    font-size: .9em
+    font-size: .9em;
         li {
             margin: 0;
             padding: .5em 0;
