--- a/scss/sorstyle.scss
+++ b/scss/sorstyle.scss
@@ -360,3 +360,12 @@ a.knap2 {
 .simple-archive.produkter .flex-item article .more-link-con {
     margin-top: 1em
 }
+.event {
+    border-bottom: 1px solid #d5d5d5;
+    background: #f2f2f2;
+    padding: 1em;
+}
+.event-month {
+    margin: 4em 0 1em 0;
+    padding: 0 0 0.5em 0;
+}
