--- a/scss/sorstyle.scss
+++ b/scss/sorstyle.scss
@@ -360,7 +360,7 @@ a.knap2 {
 .simple-archive.produkter .flex-item article .more-link-con {
     margin-top: 1em
 }
-.event {
+.event-con .event {
     border-bottom: 1px solid #d5d5d5;
     background: #f2f2f2;
     padding: 1em;
