--- a/scss/sorstyle.scss
+++ b/scss/sorstyle.scss
@@ -369,3 +369,8 @@ a.knap2 {
     margin: 4em 0 1em 0;
     padding: 0 0 0.5em 0;
 }
+.event-data {
+    .event-kort-tekst {
+        margin: 1em 0 0 0;
+    }
+}
