--- a/scss/font.scss
+++ b/scss/font.scss
@@ -340,3 +340,7 @@ header {
         font-weight: bold;
     }
 }
+h3.spalte-overskrift {
+    border-bottom: 1px solid;
+    padding: 0 0 .5em 0;
+}
