--- a/scss/sorstyle.scss
+++ b/scss/sorstyle.scss
@@ -17,6 +17,7 @@
     text-decoration: none !important;
     text-transform: uppercase;
     transition: .5s all;
+    border-radius: 4px;
 
     &:hover {
         background: #ddb907;
