--- a/scss/sorstyle.scss
+++ b/scss/sorstyle.scss
@@ -363,6 +363,7 @@ a.knap2 {
     margin-top: 1em
 }
 .listing-item .image {
-    margin: 0 5px 5px 0;
+    margin: 0 .8em 0 0;
     width: 55px;
+    float: left;
 }
