--- a/scss/sorstyle.scss
+++ b/scss/sorstyle.scss
@@ -1,8 +1,8 @@
-.ydelse .content-img  {
+.content-img  {
     background: #f2f2f2;
-}
-.ydelse .content-img img {
+ img {
     display: block;
+}
 }
 .type-liste {
     border-bottom: 1px solid;
