--- a/scss/menu-aside.scss
+++ b/scss/menu-aside.scss
@@ -1,17 +1,17 @@
 .widget_nav_menu {
     background: #f2f2f27a;
     padding: 2em;
-    box-shadow: 0 0 3px #07325e;
+    border: 1px solid #f2f2f2;
     border-radius: 3px;
     overflow-wrap: break-word;
     margin-bottom: 2em;
     overflow: hidden;
+
     .widget-title {
         border-bottom: 2px solid #fed404;
-    border-top: 2px solid #063463;
-    padding: 1em 0 1em 5px;
-    font-weight: bold;
-    margin: 0 0 1em 0;
+        border-top: 2px solid #063463;
+        padding: 1em 0 1em 5px;
+        margin: 0 0 1em 0;
     }
 
 
@@ -63,7 +63,7 @@
         }
 
         &.current-menu-item {
-            > a {
+            >a {
                 background: #dddee080;
             }
         }
