--- a/scss/form.scss
+++ b/scss/form.scss
@@ -57,16 +57,48 @@ input {
     }
 }
 
+.page-footer {
+    input[type=search] {
+        width: 75%;
+        background: rgba(255, 255, 255, 0.3);
+        color: #fff;
+
+        &::placeholder {
+            /* Chrome, Firefox, Opera, Safari 10.1+ */
+            color: #fff;
+            opacity: 1;
+            /* Firefox */
+        }
+
+        &:-ms-input-placeholder {
+            /* Internet Explorer 10-11 */
+            color: #fff;
+        }
+
+        &::-ms-input-placeholder {
+            /* Microsoft Edge */
+            color: #fff;
+        }
+    }
+
+    input[type=submit] {
+        width: 25%;
+        margin: 0;
+    }
+}
+
 // Go Back
 .go-back-con {
     margin: 2em 0;
     clear: both;
 }
-@media (min-width: 769px){
+
+@media (min-width: 769px) {
     .go-back-con {
-    margin: 2em 0 0 .5em;
+        margin: 2em 0 0 .5em;
+    }
 }
-}
+
 .go-back {
     border: 1px solid #f2f2f2;
     background: #fff;
@@ -112,15 +144,18 @@ form {
             float: left;
             padding: 0 .4em 0 .4em;
             height: 2em;
+
             &[type=search] {
                 background: rgba(255, 255, 255, .5);
                 border-radius: 3px 0 0 3px;
                 background: rgba(255, 255, 255, .5);
                 width: 70%;
+
                 &:focus {
                     background: #fff;
                 }
             }
+
             &[type=submit] {
                 background: rgba(255, 255, 255, .8);
                 border-radius: 0 3px 3px 0;
@@ -129,6 +164,7 @@ form {
                 padding-left: 0;
                 padding-right: 0;
                 cursor: pointer;
+
                 &:focus,
                 &:hover {
                     background: rgba(255, 255, 255, .9);
@@ -138,6 +174,7 @@ form {
         }
     }
 }
+
 #loginform,
 #tilmeld {
     max-width: 500px;
