--- a/scss/module.scss
+++ b/scss/module.scss
@@ -351,7 +351,8 @@ figure {
 }
 .event-data {
     padding: 1em;
-    background: #fed404;
+    border: 1px solid #063769;
+    border-radius: 2px;
     h4 {
         margin: 0;
     }
