--- a/scss/form.scss
+++ b/scss/form.scss
@@ -62,6 +62,7 @@ input {
         width: 75%;
         background: rgba(255, 255, 255, 0.3);
         color: #fff;
+        border-color: #537397;
 
         &::placeholder {
             /* Chrome, Firefox, Opera, Safari 10.1+ */
